// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react/Field > renders correctly - Array 1`] = `
<div
  id="field"
>
  {"type":"array","path":"path.0.to.field","isActive":true,"variables":{"var":"value"},"userInputs":{"test":"ok"},"fields":[],"addButtonProps":{},"id":"path__0__to__field","removeButtonProps":{},"addTextfieldProps":{},"customComponents":{},"modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - Array 2`] = `
<div
  id="field"
>
  {"type":"array","path":"path.0.to.field","isActive":true,"variables":{"var":"value"},"userInputs":{"test":"ok"},"fields":[],"addButtonProps":{"label":"TRANSLATED LABEL"},"id":"path__0__to__field","removeButtonProps":{"label":"TRANSLATED LABEL"},"addTextfieldProps":{},"customComponents":{},"modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - Button 1`] = `
<div>
  {"id":"path__0__to__field","modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - DatePicker 1`] = `
<div>
  {"maxlength":10,"name":"path.0.to.field","id":"path__0__to__field","readonly":false,"debounceTimeout":100,"modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - DatePicker 2`] = `
<div>
  {"maxlength":10,"name":"path.0.to.field","placeholder":"TRANSLATED LABEL","id":"path__0__to__field","readonly":false,"debounceTimeout":10,"value":"2022/07/07","modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - DynamicObject 1`] = `
<div
  id="field"
>
  {"type":"dynamicObject","path":"path.0.to.field","isActive":true,"variables":{"var":"value"},"userInputs":{"test":"ok"},"fields":[],"addButtonProps":{},"id":"path__0__to__field","removeButtonProps":{},"addTextfieldProps":{},"customComponents":{},"modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - DynamicObject 2`] = `
<div
  id="field"
>
  {"type":"dynamicObject","path":"path.0.to.field","isActive":true,"variables":{"var":"value"},"userInputs":{"test":"ok"},"fields":[],"addButtonProps":{},"id":"path__0__to__field","removeButtonProps":{},"addTextfieldProps":{"label":"TRANSLATED LABEL","placeholder":"TRANSLATED LABEL"},"customComponents":{},"modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - FilePicker 1`] = `
<div>
  {"name":"path.0.to.field","id":"path__0__to__field","modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - FilePicker 2`] = `
<div>
  {"name":"path.0.to.field","placeholder":"TRANSLATED LABEL","id":"path__0__to__field","modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - Link 1`] = `
<div>
  {"label":"","id":"path__0__to__field","modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - Message with label and helper 1`] = `
<div
  id="field"
>
  {"label":"TRANSLATED LABEL","id":"path__0__to__field","modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - Message with label and message 1`] = `
<div
  id="field"
>
  {"label":"TRANSLATED LABEL","id":"path__0__to__field","modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - Options 1`] = `
<div>
  {"name":"path.0.to.field","options":[{"value":"option1","label":"TRANSLATED LABEL"},{"value":"option2"},{"type":"divider"}],"id":"path__0__to__field","modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - Textarea 1`] = `
<div>
  {"name":"path.0.to.field","id":"path__0__to__field","readonly":false,"debounceTimeout":100,"modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - Textarea 2`] = `
<div>
  {"name":"path.0.to.field","placeholder":"TRANSLATED LABEL","value":"test","id":"path__0__to__field","readonly":false,"debounceTimeout":10,"modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - Textfield 1`] = `
<div>
  {"name":"path.0.to.field","id":"path__0__to__field","readonly":false,"debounceTimeout":100,"modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - Textfield 2`] = `
<div>
  {"name":"path.0.to.field","placeholder":"TRANSLATED LABEL","value":"test","id":"path__0__to__field","readonly":false,"debounceTimeout":10,"modifiers":"success "}
</div>
`;

exports[`react/Field > renders correctly - Unknown component 1`] = `null`;
